Fix flex issue on firefox

--- a/chat/src/features/chat/UserList.css
+++ b/chat/src/features/chat/UserList.css
@@ -1,12 +1,6 @@
 .UserList {
   padding: 1rem;
   flex: 1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
 }
 
 .UserList-heading {
@@ -15,8 +9,14 @@
   justify-content: space-between;
 }
 
+
 .UserList-heading h5 {
   margin-right: 2rem;
+}
+
+.UserList ul {
+  max-height: calc(var(--vh, 1vh) * 50);
+  overflow: auto;
 }
 
 .UserList ul::-webkit-scrollbar {
